--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 
             <ul class="list menu-list2">
                 <li class="menu-list2__header-address">
-                    <a class="link menu-list2__link-header menu-list2__link-header--marg" href="mailto:info@devstudio.com" target="_blank">
-                    <!-- <svg aria-label="іконка пошти" class="menu-list2__icon-mail">
+                    <a class="link menu-list2__link-header" href="mailto:info@devstudio.com" target="_blank">
+                    <svg aria-label="іконка пошти" class="menu-list2__icon-mail">
                         <use href="./images/svg-sprite/sprite-icon.svg#icon-mail"></use>
-                    </svg> -->
+                    </svg>
                     info@devstudio.com
                     </a>
                 </li>
-                <li class="header-address">
+                <li class="menu-list2__header-address">
                     <a class="link menu-list2__link-header" href="tel:+380961111111" target="_blank">
-                    <!-- <svg aria-label="іконка телефону" class="menu-list2__icon-telef">
+                    <svg aria-label="іконка телефону" class="menu-list2__icon-telef">
                         <use href="./images/svg-sprite/sprite-icon.svg#icon-telef"></use>
-                    </svg> -->
+                    </svg>
                     +38 096 111 11 11
                 </a>
             </li>
@@ -82,7 +82,7 @@
         
     </header>
 
-    <!-- <main>
+    <main>
 
         <section class="background-section">
             <div class="container">
@@ -93,7 +93,7 @@
             </div>
         </section>
 
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
                 <h2 class="visually-hidden">Наші особливоті</h2>
                 <ul class="list peculiarities">
@@ -138,9 +138,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
-        <section class="section section-3">
+        <!-- <section class="section section-3">
             <div class="container">
                 <h2 class="text-h">Чим ми займаємося</h2>
                 <ul class="list section-3__container-list"> 
@@ -447,7 +447,7 @@
                         </div>
                 </form>
         </div>
-    </footer>-->
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
