--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title> 
 
@@ -18,7 +17,7 @@
 <body>
     <header class="main-header">
         <div class="container main-header__container">
-            <a class="logo-text link" href="./index.html"><span class="logo-text-span">Web</span>Studio</a>
+            <a class="logo-text logo-text-padd link" href="./index.html"><span class="logo-text-span">Web</span>Studio</a>
 
             <button type="button" class="open-mobile-menu-btn" data-menu-open>
                 <svg class="open-mobile-menu-btn__icon" aria-label="переключатель мобильного меню">
@@ -93,7 +92,7 @@
             </div>
         </section>
 
-        <!-- <section class="section">
+        <section class="section section-bottom">
             <div class="container">
                 <h2 class="visually-hidden">Наші особливоті</h2>
                 <ul class="list peculiarities">
@@ -120,7 +119,7 @@
                     <li class="peculiarities__item">   
                         <div class="peculiarities__item-icon">
                             <svg class="peculiarities__svg-icon">
-                                <use href="./images/svg-sprite/sprite-icon.svg#icon-clock"></use>
+                                <use href="./images/svg-sprite/sprite-icon.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__text-headline">ПЛАНУВАННЯ</h3>
@@ -130,7 +129,7 @@
                     <li class="peculiarities__item">
                         <div class="peculiarities__item-icon">
                             <svg class="peculiarities__svg-icon">
-                                <use href="./images/svg-sprite/sprite-icon.svg#icon-diagram"></use>
+                                <use href="./images/svg-sprite/sprite-icon.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="peculiarities__text-headline">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -138,9 +137,9 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
-        <!-- <section class="section section-3">
+        <section class="section section-3">
             <div class="container">
                 <h2 class="text-h">Чим ми займаємося</h2>
                 <ul class="list section-3__container-list"> 
@@ -182,7 +181,7 @@
                 <h2 class="text-h">Наша команда</h2>
                 <ul class="list studio-container">
                     <li class="block-content">
-                            <img src="./images/section-team/img-s1.jpg" alt="фото Ігора Дем'яненка" width="270">
+                            <img src="./images/section-team/img-s1.jpg" alt="фото Ігора Дем'яненка" ">
                             <h3 class="text-team-name">Ігор Дем'яненко</h3>
                             <p  class="text-profession">Product Designer</p>  
                             <ul class="social-list list">
@@ -218,7 +217,7 @@
                     </li>
 
                     <li class="block-content">
-                        <img src="./images/section-team/img-s2.jpg" alt="фото Ольги Рєпіний" width="270">
+                        <img src="./images/section-team/img-s2.jpg" alt="фото Ольги Рєпіний" >
                         <h3 class="text-team-name">Ольга Рєпіна</h3>
                         <p  class="text-profession">Frontend Developer</p>
                         <ul class="social-list list">
@@ -254,7 +253,7 @@
                     </li>
 
                     <li class="block-content">
-                        <img src="./images/section-team/img-s3.jpg" alt="фото Миколи Тарасова" width="270">
+                        <img src="./images/section-team/img-s3.jpg" alt="фото Миколи Тарасова" >
                         <h3 class="text-team-name">Микола Тарасов</h3>
                         <p  class="text-profession">Marketing</p>
                         <ul class="social-list list">
@@ -290,7 +289,7 @@
                     </li>
 
                     <li class="block-content">
-                        <img src="./images/section-team/img-s4.jpg" alt="фото Михайла Єрмакова" width="270">
+                        <img src="./images/section-team/img-s4.jpg" alt="фото Михайла Єрмакова" >
                         <h3 class="text-team-name">Михайло Єрмаков</h3>
                         <p  class="text-profession">UI Designer</p>
                         <ul class="social-list list">
@@ -447,7 +446,7 @@
                         </div>
                 </form>
         </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
